--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,79 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+.extensionCard{
+  border: 1px solid #555;
+  border-radius: 10px;
+  padding: 15px;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  .content{
+    display: flex;
+    gap: 20px;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    .emojiWrapper{
+      font-size: 3rem;
+    }
+
+    .textWrapper{
+      h2{
+        margin: 0;
+      }
+    }
+  }
+
+  .buttonWrapper{
+    display: flex;
+    justify-content: space-between;
+    button{
+      background-color: transparent;
+      border: 1px solid #555;
+      padding: 5px 10px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  }
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.main{
+  display: grid;
+  gap: 20px;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+@media only screen and (min-width: 600px){
+  .main{
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+@media only screen and (min-width: 900px){
+  .main{
+    max-width: 1000px;
+    margin: auto;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+*{
+  box-sizing: border-box;
+}
+
+.switch{
+  width: 60px;
+  height: 30px;
+  border: 1px solid #555;
+  border-radius: 15px;
+  position: relative;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+  >div{
+    position: absolute;
+    width: 24px;
+    aspect-ratio: 1 / 1;
+    top: 2px;
+    left: 32px;
+    background: rgb(27, 158, 27);
+    border-radius: 50%;
+    transition: left 0.5s, 
+    background 0.5s;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+  >div.off{
+    left: 2px;
+    background: rgb(224, 71, 71);
   }
 }
